--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta charset="utf-8">
     <title></title>
   </head>
+  <body>
     <h1>My First Webpage</h1>
     <a href="weeklies.html"><h2>Weeklies</h2></a>
     <h2>Projects</h2>
