--- a/weeklies.html
+++ b/weeklies.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Weeklies</title>
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<a href="weekly1.html"></a>
+<a href="weekly1.html"><h2>WEEKLY ONE</h2></a>
+<a href="weekly2.html"><h2>WEEKLY TWO</h2></a>
   </body>
 </html>
