--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <h1>My First Webpage</h1>
-    <a href="weeklies.html"><h2>Weeklies</h2></a>
-    <h2>Projects</h2>
+  <body class="home">
+    <header>
+      <h1>ALEC FISHER'S HOMEPAGE</h1>
+    </header>
+    <a href="weeklies.html"><h2>WEEKLIES</h2></a>
+    <h2>PORTFOLIO</h2>
+    <h2>STORY</h2>
+    <h2>FINAL</h2>
   </body>
 </html>
