--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style media="screen">
+      h1 {
+
+      }
+    </style>
   </head>
   <body class="home">
     <header>
       <h1>ALEC FISHER'S HOMEPAGE</h1>
     </header>
-    <a href="weeklies.html"><h2>WEEKLIES</h2></a>
+    <a href="Weeklies/index.html"><h2>WEEKLIES</h2></a>
+    <a href="Project Parts/index.html"><h2>PROJECT PARTS</h2></a>
     <h2>PORTFOLIO</h2>
     <h2>STORY</h2>
     <h2>FINAL</h2>
