--- a/Project Parts/projectonepart1.html
+++ b/Project Parts/projectonepart1.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>Project One Part One</title>
   </head>
-  <header>
-    <h1>Project One Part One</h1>
-  </header>
   <body>
-
+<img src="projectonepart1.1.jpg" alt="">
+<img src="projectonepart1.2.jpg" alt="">
+<img src="projectonepart1.3.jpg" alt="">
   </body>
 </html>
