--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -9,6 +9,6 @@
   <body>
 <a href="weekly1.html"><h2>WEEKLY ONE</h2></a>
 <a href="weekly2.html"><h2>WEEKLY TWO</h2></a>
-<a href="weekly3.html"><h2>WEEKLY THREE</h2></a>
+<a href="Weeklies/Weekly3/index.html"><h2>WEEKLY THREE</h2></a>
   </body>
 </html>
