--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -11,4 +11,5 @@
 <a href="weekly2.html"><h2>WEEKLY TWO</h2></a>
 <a href="Weekly3/index.html"><h2>WEEKLY THREE</h2></a>
 <a href="weekly4.html"><h2>WEEKLY FOUR</h2></a>
+<a href="weekly5.html"><h2>WEEKLY FIVE</h2></a>
 </html>
