--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <a href="Weeklies/index.html"><h2>WEEKLIES</h2></a>
     <a href="Project Parts/index.html"><h2>PROJECT PARTS</h2></a>
-    <h2>PORTFOLIO</h2>
+    <a href="PORTFOLIO/index.html"><h2>PORTFOLIO</h2></a>
     <h2>STORY</h2>
     <h2>FINAL</h2>
   </body>
