updated cupcake description

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -152,7 +152,7 @@
       <img src="sweetarleens.png" alt="">
       <div class="sweetarleenstext">
         <h3>Sweet Arleen's Gourmet Cupcakes</h3>
-        <h4>Bakery Associate, June 2018 - September 2018</h4>
+        <h4>Bakery Associate, June - September 2018</h4>
         <h5>Westlake Village, CA</h5>
         <h6>Bringing in the culinary expertise side of my family, I worked as an assistant to the head pastry chef at this 4-time Cupcake Wars champion</h6>
       </div>
