--- a/Project Parts/index.html
+++ b/Project Parts/index.html
@@ -8,5 +8,6 @@
     <a href="projectonepart1.html"><h2>PROJECT ONE PART ONE</h2></a>
     <a href="projectonepart2.html"><h2>PROJECT ONE PART TWO</h2></a>
     <a href="projectonepart3.html"><h2>PROJECT ONE PART THREE</h2></a>
+    <a href="projecttwopart1.html"><h2>PROJECT TWO PART ONE</h2></a>
   </body>
 </html>
