--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -12,4 +12,5 @@
 <a href="Weekly3/index.html"><h2>WEEKLY THREE</h2></a>
 <a href="weekly4.html"><h2>WEEKLY FOUR</h2></a>
 <a href="weekly5.html"><h2>WEEKLY FIVE</h2></a>
+<a href="weekly6.html"><h2>WEEKLY SIX</h2></a>
 </html>
