--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -13,4 +13,5 @@
 <a href="weekly4.html"><h2>WEEKLY FOUR</h2></a>
 <a href="weekly5.html"><h2>WEEKLY FIVE</h2></a>
 <a href="weekly6.html"><h2>WEEKLY SIX</h2></a>
+<a href="weekly7.html"><h2>WEEKLY SEVEN</h2></a>
 </html>
