--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -14,4 +14,5 @@
 <a href="weekly5.html"><h2>WEEKLY FIVE</h2></a>
 <a href="weekly6.html"><h2>WEEKLY SIX</h2></a>
 <a href="weekly7.html"><h2>WEEKLY SEVEN</h2></a>
+<a href="Weekly8/weekly8.html"><h2>WEEKLY EIGHT</h2></a>
 </html>
