--- a/Weeklies/index.html
+++ b/Weeklies/index.html
@@ -15,4 +15,5 @@
 <a href="weekly6.html"><h2>WEEKLY SIX</h2></a>
 <a href="weekly7.html"><h2>WEEKLY SEVEN</h2></a>
 <a href="Weekly8/weekly8.html"><h2>WEEKLY EIGHT</h2></a>
+<a href="Weekly9/weeklynine.html"><h2>WEEKLY NINE</h2></a>
 </html>
