--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="Weeklies/index.html"><h2>WEEKLIES</h2></a>
     <a href="Project Parts/index.html"><h2>PROJECT PARTS</h2></a>
     <a href="PORTFOLIO/index.html"><h2>PORTFOLIO</h2></a>
-    <h2>STORY</h2>
+    <a href="Digital Narrative/index.html"><h2>STORY</h2></a>
     <h2>FINAL</h2>
   </body>
 </html>
